*gitlab-ce-10.2.8 (16 Feb 2018)

  16 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-10.2.8-database.yml.patch, +gitlab-ce-10.2.8.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 10.2.8.

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/07-gitlab-ce-10.0.7-yarn.patch, gitlab-ce-10.0.7.ebuild:
  www-apps/gitlab-ce:  Add patch for package.json and yarn.lock in order to fix
  dependency errors that cause emerge --config gitlab-ce to fail

*gitlab-ce-9.5.10 (08 Feb 2018)

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.10.ebuild,
  -gitlab-ce-9.5.9.ebuild:
  www-apps/gitlab-ce:  Update 9.5.9.-> 9.5.10

*gitlab-ce-10.0.7 (08 Feb 2018)

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.7.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 10.0.7, the latest version for the
  10.0 branch.

*gitlab-ce-10.0.4 (27 Oct 2017)

  27 Oct 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.4.ebuild,
  -gitlab-ce-10.0.1.ebuild:
  www-apps/gitlab-ce:  Version 10.0.4

*gitlab-ce-9.5.9 (27 Oct 2017)

  27 Oct 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.9.ebuild,
  -gitlab-ce-9.5.4.ebuild:
  www-apps/gitlab-ce:  Version 9.5.9

*gitlab-ce-9.4.7 (27 Oct 2017)

  27 Oct 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.4.7.ebuild,
  -gitlab-ce-9.4.6.ebuild, gitlab-ce-10.0.0_rc3.ebuild, gitlab-ce-10.0.1.ebuild,
  gitlab-ce-9.0.13.ebuild, gitlab-ce-9.1.10.ebuild, gitlab-ce-9.2.10.ebuild,
  gitlab-ce-9.3.11.ebuild, gitlab-ce-9.5.4.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Version 9.4.7

*gitlab-ce-10.0.1 (25 Sep 2017)

  25 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.1.ebuild:
  www-apps/gitlab-ce:  Add ebuild for gitlab-10.0.1.

*gitlab-ce-10.0.0_rc3 (17 Sep 2017)

  17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.0_rc3.ebuild,
  -gitlab-ce-9.4.0_rc6.ebuild:
  www-apps/gitlab-ce:  Add ebuild for gitlab-10.0.0_rc3.
