@@ -1,3 +1,8 @@
+*gitlab-ce-10.3.7 (17 Feb 2018)
+
+  17 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.3.7.ebuild:
+  www-apps/gitlab-ce:  Add ebuild for version 10.3.7.
+
 *gitlab-ce-10.2.8 (16 Feb 2018)
 
   16 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
